# ha-beestat

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
custom_components/: __init__.py
custom_components/beestat/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  data.py  manifest.json  sensor.py
custom_components/beestat/translations/: en.json
tests/: _load_module.py  conftest.py  mock_client.py  test_api_client.py  test_data_extraction.py  test_integration_setup.py  test_mock_client.py
