[project]
name = "ha-beestat"
version = "0.1.0"
description = "Beestat Home Assistant Integration (HACS)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]
ignore = ["E501"]
